--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.3.0",
+    "lodash": "^4.17.19",
     "next": "9.5.1",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
