--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.19",
     "next": "9.5.1",
     "node-fetch": "^2.6.0",
+    "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
