--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-modal": "^3.11.2",
     "react-slick": "^0.27.2-beta-1",
     "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
