--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "16.13.1",
     "react-modal": "^3.11.2",
     "react-slick": "^0.27.2-beta-1",
-    "styled-components": "^5.1.1",
+    "styled-components": "4.4.1",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.0"
   },
